--- a/style.css
+++ b/style.css
@@ -2,6 +2,38 @@
     box-sizing: border-box;
 }
 
+body {
+    text-align: center;
+}
+
+main {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 100px;
+}
+
+.controls {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+}
+
+.grid-size-slider {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 50%;
+    cursor: pointer;
+    outline: none;
+}
+
+.grid-size-slider::-webkit-slider-runnable-track {
+    height: 15px;
+    background: #ccc;
+    border-radius: 16px;
+}
+
 .cell {
     border: 1px solid black;
 }
@@ -12,3 +44,6 @@
     height: 400px;
     width: 400px;
 }
+
+
+
