--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ main {
 .controls {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
     gap: 30px;
 }
@@ -53,8 +54,8 @@ main {
 .container {
     display: flex;
     flex-wrap: wrap;
-    height: 400px;
-    width: 400px;
+    height: 500px;
+    width: 500px;
     background-color: #FFFAE7;
     border-radius: 16px;
     box-shadow: inset 0px 0px 10px rgba(0,0,0,0.9);
