--- a/style.css
+++ b/style.css
@@ -71,15 +71,27 @@ button {
 .grid-size-slider {
     -webkit-appearance: none;
     appearance: none;
-    width: 50%;
+    width: 100%;
     cursor: pointer;
     outline: none;
 }
 
 .grid-size-slider::-webkit-slider-runnable-track {
-    height: 15px;
-    background: #ccc;
+    height: 10px;
+    background: white;
     border-radius: 16px;
+    border: 1px solid black;
+}
+
+.grid-size-slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    height: 20px;
+    width: 20px;
+    background-color: black;
+    border-radius: 50%;
+    margin-top: -6px;
+    margin-left: -1px;
 }
 
 .cell {
