--- a/style.css
+++ b/style.css
@@ -68,6 +68,11 @@ button {
 
 }
 
+.grid-size {
+    font-family: "Hello";
+    font-size: 20px;
+}
+
 .grid-size-slider {
     -webkit-appearance: none;
     appearance: none;
@@ -103,7 +108,6 @@ button {
     flex-wrap: wrap;
     height: 500px;
     width: 500px;
-    border-radius: 16px;
     box-shadow: inset 0px 0px 10px rgba(0,0,0,0.9);
 }
 
